# MAE_ViT_MIMIC_CXR

./: .gitignore  README.md  TODO  TODO.md  experiments_runner.py  pyproject.toml  requirements.txt
final_project/: config.py  datamodels.py  main.py  main2.py  main3.py  mimic_sample_trainer.py  proj_transformers.py  utils.py
final_project/assets/metrics/: facebook-vit-mae-base_20230715_140615.json  microsoft-resnet-18_20230708_173231.json  microsoft-resnet-18_20230708_173329.json  microsoft-resnet-18_20230715_140357.json  microsoft-resnet-18_20230715_165057.json
final_project/datasets/: datamodels.py  mimic.py  mimic_sample.py  parking.py  parking_dataset.py
final_project/models/: base.py  convnext.py  mae.py  resnet.py
final_project/nootbooks/: split_data.ipynb
final_project/trainer/: datamodels.py  trainer.py
final_project/trainers/: datamodels.py  trainer.py
final_project/transformers/: proj_transformers.py
final_project/utils/: data_copy.py  dataset_builder.py  plots.py  temp.py
mae_mimic/: config.py
mae_mimic/assets/metrics/: facebook-vit-mae-base_20230709_101214.json  (+13 more)
mae_mimic/datasets/: datamodels.py  mimic.py  mimic_sample.py  parking.py
mae_mimic/models/: convnext.py  datamodels.py  mae.py  resnet.py
mae_mimic/nootbooks/: generate-stats-from-paper.ipynb
mae_mimic/trainer/: datamodels.py  trainer.py
mae_mimic/transformers/: proj_transformers.py
mae_mimic/utils/: data_copy.py  dataset_builder.py  loss_plots.py  mimic_sample_builder.py  plots.py  temp.py
notebooks/: generate-stats-from-paper.ipynb  split_data.ipynb
(+2 files in other folders)
