[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "final_project"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.1"
pandas = "^2.0.1"
transformers = "^4.29.2"
pillow = "^9.5.0"
torchvision = "^0.15.2"
pydantic = "^1.10.8"
scikit-learn = "^1.2.2"
timm = "^0.9.2"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"
datasets = "^2.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
